# cmake

case1/: CMakeLists.txt
case2/: CMakeLists.txt
case2/cmake/: FindTEST.cmake
case2/src/: CMakeLists.txt  main.cpp  test.cpp
case3/: CMakeLists.txt  test.cpp
case3/test/: CMakeLists.txt
case4/: CMakeLists.txt  tutorial.cxx
case4/MathFunctions/: CMakeLists.txt  mysqrt.cxx  mysqrt.h
