INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/include)
ADD_LIBRARY(test test.cpp)
FIND_PACKAGE(TEST REQUIRED)
IF(TEST_FOUND)
    INCLUDE_DIRECTORIES(${TEST_INCLUDE_DIR})
    ADD_LIBRARY(test test.cpp)
    # LINK_DIRECTORIES(${TEST_LIBARY_DIR}) # -L
    ADD_EXECUTABLE(main main.cpp)
    TARGET_LINK_LIBRARIES(main ${TEST_LIBRARY}) # -l
    ADD_DEPENDENCIES(main test)
ENDIF(TEST_FOUND)

