add_library(MathFunctions_static STATIC mysqrt.cxx)
add_library(MathFunctions SHARED mysqrt.cxx)
set_target_properties(MathFunctions PROPERTIES VERSION 1.0 SOVERSION 1)
#install (TARGETS MathFunctions DESTINATION bin PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ) 
install (TARGETS MathFunctions DESTINATION bin) 
install (TARGETS MathFunctions_static DESTINATION bin) 
install (FILES mysqrt.h DESTINATION include)
